180
Yep!! Chalk up another three-digit bug for mr. Zaugg!

Verified to work with scalac from https://github.com/scala/scala/pull/3440. 
I'll submit a PR with the test case.

{code}
$ pr_dist 3440
$ /Users/adriaan/git/scala-dist/target/universal/stage/bin/scalac /Users/adriaan/Desktop/bugs/t261/Test.scala 
# WOOHOO
$ scalac -version
Scala compiler version 2.11.0-M7 -- Copyright 2002-2013, LAMP/EPFL
$ scalac /Users/adriaan/Desktop/bugs/t261/Test.scala:8: error: value foo in trait B cannot be accessed in object Test
     println(foo)
             ^
one error found

$ cat /Users/adriaan/Desktop/bugs/t261/Test.scala 
trait A { val foo: String = "A" }
trait B {
   private val foo: String = "B"
   def f = println(foo)
}
object Test extends A with B {
   def main(args: Array[String]) = {
     println(foo)
     f
   }
}

$ /Users/adriaan/git/scala-dist/target/universal/stage/bin/scala Test
A
B
{code}

PS: https://github.com/adriaanm/binfu/blob/master/scafu.sh#L41
